Rain Test Animation demo crashes Blender 3.3 #101559

Closed
opened 2022-10-02 18:22:28 +02:00 by Anthony · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce
Worked: unknown, never tried the file before Blender 3.3

Short description of error
On trying to open the rain_restaurant.blend Blender 3.3 just instant crashes to desktop

Exact steps for others to reproduce the error
Download the zip file from https://studio.blender.org/characters/5f1ed640e9115ed35ea4b3fb/showcase/1/

Unzip it and try to load rain_restaurant.blend, Blender 3.3 will just crash.

Here is the crash report.
rain_restaurant.crash.txt

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40 **Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` Worked: unknown, never tried the file before Blender 3.3 **Short description of error** On trying to open the rain_restaurant.blend Blender 3.3 just instant crashes to desktop **Exact steps for others to reproduce the error** Download the zip file from https://studio.blender.org/characters/5f1ed640e9115ed35ea4b3fb/showcase/1/ Unzip it and try to load rain_restaurant.blend, Blender 3.3 will just crash. Here is the crash report. [rain_restaurant.crash.txt](https://archive.blender.org/developer/F13607001/rain_restaurant.crash.txt)

Added subscriber: @antgib

Added subscriber: @antgib

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm the issue.

view_layer was nullptr

>	blender.exe!BKE_view_layer_synced_ensure(const Scene * scene, ViewLayer * view_layer) Line 972	C

 	blender.exe!BKE_lib_override_library_create(Main * bmain, Scene * scene, ViewLayer * view_layer, Library * owner_library, ID * id_root_reference, ID * id_hierarchy_root_reference, ID * id_instance_hint, ID * * r_id_root_override, const bool do_fully_editable) Line 1383	C++
 	blender.exe!BKE_lib_override_library_proxy_convert(Main * bmain, Scene * scene, ViewLayer * view_layer, Object * ob_proxy) Line 85	C
 	blender.exe!lib_override_library_proxy_convert_do(Main * bmain, Scene * scene, Object * ob_proxy, BlendFileReadReport * reports) Line 99	C
 	blender.exe!BKE_lib_override_library_main_proxy_convert(Main * bmain, BlendFileReadReport * reports) Line 135	C
 	blender.exe!setup_app_data(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 363	C
 	blender.exe!setup_app_blend_file_data(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 448	C
 	blender.exe!BKE_blendfile_read_setup_ex(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports, const bool startup_update_defaults, const unsigned char * startup_app_template) Line 477	C
 	blender.exe!BKE_blendfile_read_setup(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 486	C
 	blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 954	C
 	blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2660	C
 	blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2692	C++
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3280	C++
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3337	C++
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3928	C++
 	blender.exe!WM_main(bContext * C) Line 643	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 580	C
 	[External Code]	

The problem was introduced somewhere in 3.4 between e261290cb6 and e1a9c16176 (68589a31eb ?) and then backported to 3.3.

I can confirm the issue. `view_layer was nullptr` ``` > blender.exe!BKE_view_layer_synced_ensure(const Scene * scene, ViewLayer * view_layer) Line 972 C blender.exe!BKE_lib_override_library_create(Main * bmain, Scene * scene, ViewLayer * view_layer, Library * owner_library, ID * id_root_reference, ID * id_hierarchy_root_reference, ID * id_instance_hint, ID * * r_id_root_override, const bool do_fully_editable) Line 1383 C++ blender.exe!BKE_lib_override_library_proxy_convert(Main * bmain, Scene * scene, ViewLayer * view_layer, Object * ob_proxy) Line 85 C blender.exe!lib_override_library_proxy_convert_do(Main * bmain, Scene * scene, Object * ob_proxy, BlendFileReadReport * reports) Line 99 C blender.exe!BKE_lib_override_library_main_proxy_convert(Main * bmain, BlendFileReadReport * reports) Line 135 C blender.exe!setup_app_data(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 363 C blender.exe!setup_app_blend_file_data(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 448 C blender.exe!BKE_blendfile_read_setup_ex(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports, const bool startup_update_defaults, const unsigned char * startup_app_template) Line 477 C blender.exe!BKE_blendfile_read_setup(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 486 C blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 954 C blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2660 C blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2692 C++ blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3280 C++ blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3337 C++ blender.exe!wm_event_do_handlers(bContext * C) Line 3928 C++ blender.exe!WM_main(bContext * C) Line 643 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 580 C [External Code] ``` The problem was introduced somewhere in 3.4 between `e261290cb6` and `e1a9c16176` (68589a31eb ?) and then backported to 3.3.

This issue was referenced by c3003b4346

This issue was referenced by c3003b4346fd5c5595bf0199ca1b97d01a695d68

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Bastien Montagne self-assigned this 2022-10-04 11:05:10 +02:00

This issue was referenced by 8d97ecde02

This issue was referenced by 8d97ecde02b4fff5c83fc6802372d14f8cf28a53
Bastien Montagne added this to the Core project 2023-02-09 15:43:11 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101559
There is no content yet.