Fix T101559: Rain Test Animation demo crashes Blender 3.3

Update to liboverride creation code to add support of keeping active
object forgot to consider case when there is no known/given view layer.

NOTE: due to differences in code, fix for 3.3 will be a bit different.